--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -2,7 +2,8 @@
 
 @for $i from 1 through 6 {
   h#{$i} {
-    font-weight: 700;
+    font-family: "Bebas Neue", sans-serif;
+    font-weight: 200;
     line-height: 1;
     margin: 1rem 0;
     margin-top: 2.5rem;
